fix overflow issue on left section

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -33,6 +33,8 @@
     margin: 0 auto;
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
 
