--- a/src/components/Result.scss
+++ b/src/components/Result.scss
@@ -2,7 +2,7 @@
 
 .results {
   padding-top: 3.6rem;
-  padding-bottom: 10rem;
+  padding-bottom: 3.6rem;
   overflow: auto;
   height: 100%;
 
